# arduino

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/workflows/: rust_ci.yml
esp32/esp32-devkit-v1/: Cargo.toml  README.md  build.rs
esp32/esp32-devkit-v1/src/: main.rs
esp32/esp32-devkit-v1/src/app/: ble.rs  button.rs  led.rs  mod.rs  tasks.rs
esp32/esp32-devkit-v1/src/app/ble/: ble_command.rs  ble_event.rs  ble_handle.rs  ble_runner.rs  ble_state.rs  ble_task.rs  mod.rs
esp32/esp32-devkit-v1/src/app/led/: led_command.rs  led_event.rs  led_handle.rs  led_runner.rs  led_task.rs  mod.rs
esp32/esp32-devkit-v1/src/app/tasks/: ble_task.rs  button_task.rs  event_coordinator.rs  led_task.rs  mod.rs  task_manager.rs  ui_task.rs
esp32/esp32-devkit-v1/src/config/: mod.rs  pins.rs
uno-rust-blink/: Cargo.toml  README.md
uno-rust-blink/.cargo/: config.toml
uno-rust-blink/src/: main.rs
